// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr-hello-world build custom port should generate a production server running on custom port 1`] = `
SCRIPTS: [
  "http://localhost:4000/runtime.js",
  "http://localhost:4000/2.js",
  "http://localhost:4000/main.js",
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
]
CSS: [
  "http://localhost:4000/main-1f5c2cf64419575cffa6.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' http://localhost:4000 https://some-cdn.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="qixxyt0">
        <div class="qixxyt1">
          Hello World
        </div>
        <img src="http://localhost:4000/a85d2645cc4d80a20b5b.png">
      </div>
    </div>
    <script src="scripts[3]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr-hello-world build default port should generate a production server based on config 1`] = `
SCRIPTS: [
  "http://localhost:4000/runtime.js",
  "http://localhost:4000/2.js",
  "http://localhost:4000/main.js",
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
]
CSS: [
  "http://localhost:4000/main-1f5c2cf64419575cffa6.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' http://localhost:4000 https://some-cdn.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="qixxyt0">
        <div class="qixxyt1">
          Hello World
        </div>
        <img src="http://localhost:4000/a85d2645cc4d80a20b5b.png">
      </div>
    </div>
    <script src="scripts[3]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr-hello-world start should start a development server 1`] = `
SCRIPTS: [
  "http://127.0.0.1:8100/runtime.js",
  "http://127.0.0.1:8100/2.js",
  "http://127.0.0.1:8100/main.js",
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
]
CSS: [
  "http://127.0.0.1:8100/main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' http://127.0.0.1:8100 https://some-cdn.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=' 'unsafe-eval';"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="styles_root__qixxyt0">
        <div class="styles_nested__qixxyt1">
          Hello World
        </div>
        <img src="http://127.0.0.1:8100/a85d2645cc4d80a20b5b.png">
      </div>
    </div>
    <script src="scripts[3]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
